--- a/Advertisement/Advertisment.html
+++ b/Advertisement/Advertisment.html
@@ -26,9 +26,9 @@
 				</section>
 				<div class="right">	
 					<ul>
-						<li><a href="/future/index.html">Future</a></li>
-						<li><a href="/Advertisement/Advertisment.html">Advertisement</a></li>
-						<li><a href="/mechaE/mechaE.html">MechaE</a></li>
+						<li><a href="../index.html">Future</a></li>
+						<li><a href="../Advertisement/Advertisment.html">Advertisement</a></li>
+						<li><a href="../mechaE/mechaE.html">MechaE</a></li>
 						<li><a href="#">None</a></li>
 					</ul>
 					<button class="login oxygen-bold"><a href="login.html">LOGIN</a></button>
