--- a/mechaE/mechaE.html
+++ b/mechaE/mechaE.html
@@ -34,9 +34,9 @@
 					<!-- responsive Navbar -->
 					<div class="rNav">
 						<ul class="res-nav">
-							<li><a href="/future/index.html">future</a></li>
-							<li><a href="/Advertisement/Advertisment.html">Advertisement</a></li>
-							<li><a href="/mechaE/mechaE.html" class="active">MechaE</a></li>
+							<li><a href="../index.html">future</a></li>
+							<li><a href="../Advertisement/Advertisment.html">Advertisement</a></li>
+							<li><a href="../mechaE/mechaE.html" class="active">MechaE</a></li>
 							<li><a href="#">None</a></li>
 							<button class="login-btn">LOGIN</button>
 						</ul>
