Update Future (content)

--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
                     <div class="box2"></div>
                 </div>
                 <div class="center">
-                    <div class="box1"></div>
+                    <div class="box1">
+                        <h2>来たる</h2>
+                    </div>
                     <div class="right">
                         <div class="box2"></div>
                         <div class="box3"></div>
@@ -88,8 +90,13 @@
                     </div>
                     <div class="text-content">
                         <div class="box-left">
-                            <h2>Futuristic</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo qui consequuntur nesciunt explicabo veniam, veritatis alias pariatur ipsa! Illo libero fugiat aliquid culpa voluptatem, distinctio quae excepturi optio ullam quas?</p>
+                            <div class="title">
+                                <h2>Where</h2>
+                                <h2>Do We Go From Here</h2>
+                            </div>                         
+                            <p>For centuries, humanity has dreamed of what lies ahead. Now, those dreams are closer than ever to reality. Step into a world of limitless possibility, where artificial intelligence, sustainable design, and space exploration redefine the human experience.</p>
+                            <p>The future isn't a single destination; it's a spectrum of potential. Explore the grand visions, the subtle shifts, and the profound questions that will define the rest of this century. What does your future look like?</p>
+                            <p>"Call Me Ryd"<br>"私をリドと呼んで"</p>
                         </div>
                         <div class="box-right"></div>
                         <button><a href="#">✓</a></button>
