--- a/index.html
+++ b/index.html
@@ -106,5 +106,40 @@
         </div>
      </div>
 
+     <!-- Gallery -->
+      <div class="gallery-page">
+        <div class="parent-1">
+            <div class="bg-box">
+                <div class="box-left">
+                    <div class="box1"></div>
+                    <div class="box2"></div>
+                </div>
+                <div class="box-right">
+                    <div class="box3"></div>
+                    <div class="box4"></div>
+                </div>
+                <div class="model">
+                    <div class="model-a">
+                        <div class="box">
+                            <div class="img"></div>
+                            <button><a href="`#">私</a></button>
+                        </div>
+                    </div>
+                    <div class="model-a">
+                        <div class="box">
+                            <div class="img"></div>
+                            <button><a href="`#">を</a></button>
+                        </div>
+                    </div>
+                    <div class="model-a">
+                        <div class="box">
+                            <div class="img"></div>
+                            <button><a href="`#">ド</a></button>
+                        </div>
+                    </div>
+                </div>
+            </div>            
+        </div>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                
+      </div>
 </body>
 </html>
