update maps page

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <div class="navbar">
             <a href="#">Ryd</a>
             <ul>
-                <li><a href="/future/index.html">Future</a></li>
+                <li><a href="/index.html">Future</a></li>
                 <li><a href="/Advertisement/Advertisment.html">Advertisement</a></li>
                 <li><a href="/mechaE/mechaE.html">MechaE</a></li>
-                <li><a href="#">None</a></li>
+                <li><a href="/BP-BOOTSTRAP-main/BP-BOOTSTRAP-main/bottsrap.html">Bootstrap</a></li>
             </ul>
         </div>
     </nav>
@@ -60,7 +60,7 @@
     </div>
 
     <!-- Content -->
-     <div class="content-page">
+    <div class="content-page">
         <div class="parent-1">
             <div class="box-bg">
                 <div class="top">
@@ -104,10 +104,10 @@
                 </div>
             </div>
         </div>
-     </div>
+    </div>
 
-     <!-- Gallery -->
-      <div class="gallery-page">
+    <!-- Gallery -->
+    <div class="gallery-page">
         <div class="parent-1">
             <div class="bg-box">
                 <div class="box-left">
@@ -117,29 +117,69 @@
                 <div class="box-right">
                     <div class="box3"></div>
                     <div class="box4"></div>
+                    <div class="box-jupun">
+                        <h2>来たる</h2>
+                    </div>
                 </div>
                 <div class="model">
                     <div class="model-a">
                         <div class="box">
-                            <div class="img"></div>
+                            <div class="img img1"></div>
                             <button><a href="`#">私</a></button>
                         </div>
                     </div>
                     <div class="model-a">
                         <div class="box">
-                            <div class="img"></div>
+                            <div class="img img2"></div>
                             <button><a href="`#">を</a></button>
                         </div>
                     </div>
                     <div class="model-a">
                         <div class="box">
-                            <div class="img"></div>
+                            <div class="img img3"></div>
                             <button><a href="`#">ド</a></button>
                         </div>
                     </div>
                 </div>
             </div>            
         </div>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                
-      </div>
+    </div>
+
+    <!-- Maps -->
+    <div class="maps-page">
+        <div class="parent-1">
+            <div class="bg-box">
+                <div class="box-left">
+                    <div class="box-top">
+                        <div class="box1"></div>
+                        <div class="box2"></div>
+                    </div>
+                    <div class="box2"></div>
+                    <div class="box-bottom">
+                        <div class="box1"></div>
+                        <div class="box2"><button><a href="#">ボタン</a></button></div>
+                        <div class="box3"><button><a href="#">ボタン</a></button></div>
+                    </div>
+                </div>
+                <div class="box-right">
+                    <div class="box1"></div>
+                    <div class="box2"></div>
+                    <div class="box3"></div>
+                </div>
+                <div class="box-l">
+                    <div id="map">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31641.315425352925!2d110.79987273686537!3d-7.557043523111388!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a1439fd2dca77%3A0x970ee2681ee81b61!2sKorem%20074%2FWarastratama!5e0!3m2!1sid!2sid!4v1759877533529!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </div>  
+            </div>
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <footer>
+        <div class="footer-content">
+            <p>&copy; 2025 My Website. All rights reserved.</p>
+        </div>
+    </footer>
 </body>
 </html>
